# Ma-on-Practica2

./: README.md
manon-practica-2/: .gitignore  pyproject.toml  rxconfig.py
manon-practica-2/manon_practica_2/: manon_practica_2.py
