[project]
name = "manon-practica-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Elison Roa",email = "elisonroa@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11,<4.0"
dependencies = [
    "reflex (>=0.9.2.post1,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
